# Desktop-AI-Instant-Messenger

./: .gitignore  CMakeLists.txt  avatarutils.cpp  avatarutils.h  chathistory.cpp  chathistory.h  claudeclient.cpp  claudeclient.h  configmanager.cpp  configmanager.h  constants.h  contactstore.cpp  contactstore.h  deepseekclient.cpp  deepseekclient.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_network.cpp  markdownutils.cpp  markdownutils.h  skillmanager.cpp  skillmanager.h  taskplanner.cpp  taskplanner.h
